--- a/clusters/in-cluster/addons/prometheus-operator.yaml
+++ b/clusters/in-cluster/addons/prometheus-operator.yaml
@@ -2,3 +2,10 @@ kube-prometheus-stack:
   defaultRules:
     rules:
       etcd: true
+
+  kubeControllerManager:
+    enabled: true
+  kubeEtcd:
+    enabled: true
+  kubeScheduler:
+    enabled: true
