--- a/bootstrap/addons-appset.yaml
+++ b/bootstrap/addons-appset.yaml
@@ -44,3 +44,12 @@ spec:
         syncOptions:
           - CreateNamespace=true
           - ServerSideApply=true  # Big CRDs.
+      ignoreDifferences:
+          - group: admissionregistration.k8s.io
+            kind: MutatingWebhookConfiguration
+            jqPathExpressions:
+            - .webhooks[].clientConfig.caBundle
+          - group: admissionregistration.k8s.io
+            kind: ValidatingWebhookConfiguration
+            jqPathExpressions:
+            - .webhooks[].clientConfig.caBundle
