Update capsule settings
Signed-off-by: Sergiy Kulanov <sergiy_kulanov@epam.com>

--- a/charts/addons/capsule-tenant/edp-tenant.yaml
+++ b/charts/addons/capsule-tenant/edp-tenant.yaml
@@ -5,11 +5,11 @@ metadata:
 spec:
   owners:
     # uncomment if Argo CD manage main EDP tenant
-    - clusterRoles:
-        - admin
-        - capsule-namespace-deleter
-      kind: ServiceAccount
-      name: system:serviceaccount:argocd:argocd-application-controller
+    # - clusterRoles:
+    #     - admin
+    #     - capsule-namespace-deleter
+    #   kind: ServiceAccount
+    #   name: system:serviceaccount:argocd:argocd-application-controller
     #
     # uncomment if edp-oidc-admins group manage main EDP tenant
     # - clusterRoles:
