--- a/charts/addons/capsule-system/Chart.yaml
+++ b/charts/addons/capsule-system/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: capsule
+name: capsule-system
 description: A Helm chart for capsule
 
 # Application charts are a collection of templates that can be packaged into versioned archives
