--- a/charts/addons/capsule-system/values.yaml
+++ b/charts/addons/capsule-system/values.yaml
@@ -6,7 +6,7 @@ capsule :
       capsuleUserGroups:
         - capsule.clastix.io
         # uncomment if Argo CD manage main EDP tenant
-        # - system:serviceaccounts:argocd
+        - system:serviceaccounts:argocd
         # enable for cd-pipeline-operator https://github.com/epam/edp-cd-pipeline-operator/blob/release/2.17/deploy-templates/values.yaml#L10
         - system:serviceaccounts:edp
         # uncomment if edp-oidc-admins group manage main EDP tenant https://epam.github.io/edp-install/operator-guide/edp-access-model
