--- a/charts/addons/capsule-system/values.yaml
+++ b/charts/addons/capsule-system/values.yaml
@@ -1,4 +1,5 @@
-capsule :
+capsule:
+  fullnameOverride: capsule-system
   manager:
     options:
       # enable capsule for EDP tenant and cd-pipeline-operator
