chore: Align to capsule naming approach
servicename is hardcoded to value: capsule-webhook-service

Signed-off-by: Sergiy Kulanov <sergiy_kulanov@epam.com>

--- a/charts/addons/capsule-system/values.yaml
+++ b/charts/addons/capsule-system/values.yaml
@@ -1,5 +1,5 @@
 capsule:
-  fullnameOverride: capsule-system
+  fullnameOverride: capsule
   manager:
     options:
       # enable capsule for EDP tenant and cd-pipeline-operator
