--- a/bootstrap/addons-appset.yaml
+++ b/bootstrap/addons-appset.yaml
@@ -8,37 +8,38 @@ spec:
   generators:
     - matrix:
         generators:
-          # For every directory (Helm Umbrella chart) in the `charts/addons` path.
           - git:
               repoURL: https://github.com/sergk/appset-addons
-              revision: HEAD
-              directories:
-              - path: charts/addons/*
+              revision: poc
+              files:
+                - path: configs/*/*/config.yaml
+              values:
+                app_name: "{{index .path 2}"
 
           - clusters:
               selector:
                 matchExpressions:
-                # Check annotation to see if addon is enabled.
-                - key: enable_{{ .path.basename | snakecase }}
+                # Check label to see if addon is enabled.
+                - key: enable_{{ .values.app_name | snakecase }}
                   operator: In
                   values: ['true']
   template:
     metadata:
-      name: 'addon-{{.name}}-{{.path.basename}}'
+      name: 'addon-{{.cluster.name}}-{{.values.app_name}}'
     spec:
       project: default
       source:
         helm:
-          releaseName: '{{.path.basename}}'
+          releaseName: '{{.values.app_name}}'
           ignoreMissingValueFiles: true
           valueFiles:
-          - '../../../clusters/{{.name}}/addons/{{.path.basename}}.yaml'
+          - '../../../clusters/{{.cluster.name}}/addons/{{.values.app_name}}.yaml'
         repoURL: 'https://github.com/sergk/appset-addons'
-        path: '{{.path.path}}'
-        targetRevision: HEAD
+        path: 'charts/addons/{{.values.app_name}}'
+        targetRevision: poc
       destination:
-        namespace: '{{.path.basename}}'
-        name: '{{.name}}'
+        namespace: '{{.values.app_name}}'
+        name: '{{.cluster.name}}'
       syncPolicy:
         automated: {}
         syncOptions:
