--- a/bootstrap/addons-appset.yaml
+++ b/bootstrap/addons-appset.yaml
@@ -14,7 +14,7 @@ spec:
               files:
                 - path: configs/*/*/config.yaml
               values:
-                app_name: "{{index .path 2}}"
+                app_name: "{{.path.basename}}"
 
           - clusters:
               selector:
