feat: Add templatePatch feature
Signed-off-by: Sergiy Kulanov <sergiy_kulanov@epam.com>

--- a/bootstrap/addons-appset.yaml
+++ b/bootstrap/addons-appset.yaml
@@ -54,3 +54,10 @@ spec:
             kind: ValidatingWebhookConfiguration
             jqPathExpressions:
             - .webhooks[].clientConfig.caBundle
+
+  templatePatch: |
+    {{- if .autoSync }}
+      syncPolicy:
+        automated:
+          prune: {{ .prune }}
+    {{- end }}
