feat: Disable autosync by default
Signed-off-by: Sergiy Kulanov <sergiy_kulanov@epam.com>

--- a/bootstrap/addons-appset.yaml
+++ b/bootstrap/addons-appset.yaml
@@ -41,7 +41,6 @@ spec:
         namespace: '{{.values.app_name}}'
         name: '{{.cluster.name}}'
       syncPolicy:
-        automated: {}
         syncOptions:
           - CreateNamespace=true
           - ServerSideApply=true  # Big CRDs.
@@ -57,7 +56,33 @@ spec:
 
   templatePatch: |
     {{- if .autoSync }}
+    spec:
+      project: default
+      source:
+        helm:
+          releaseName: '{{.values.app_name}}'
+          ignoreMissingValueFiles: true
+          valueFiles:
+          - '../../../clusters/{{.cluster.name}}/addons/{{.values.app_name}}.yaml'
+        repoURL: 'https://github.com/sergk/appset-addons'
+        path: 'charts/addons/{{.values.app_name}}'
+        targetRevision: poc
+      destination:
+        namespace: '{{.values.app_name}}'
+        name: '{{.cluster.name}}'
       syncPolicy:
         automated:
           prune: {{ .prune }}
+        syncOptions:
+          - CreateNamespace=true
+          - ServerSideApply=true  # Big CRDs.
+      ignoreDifferences:
+          - group: admissionregistration.k8s.io
+            kind: MutatingWebhookConfiguration
+            jqPathExpressions:
+            - .webhooks[].clientConfig.caBundle
+          - group: admissionregistration.k8s.io
+            kind: ValidatingWebhookConfiguration
+            jqPathExpressions:
+            - .webhooks[].clientConfig.caBundle
     {{- end }}
