chore: Do not fail if auto sync is not defined
Signed-off-by: Sergiy Kulanov <sergiy_kulanov@epam.com>

--- a/bootstrap/addons-appset.yaml
+++ b/bootstrap/addons-appset.yaml
@@ -55,8 +55,8 @@ spec:
             - .webhooks[].clientConfig.caBundle
 
   templatePatch: |
-    {{- if .autoSync }}
+    {{- if (default false .values.autoSync) }}
       syncPolicy:
         automated:
-          prune: {{ .prune }}
+          prune: {{ default false .values.prune }}
     {{- end }}
