chore: Update config for nginx
Signed-off-by: Sergiy Kulanov <sergiy_kulanov@epam.com>

--- a/bootstrap/addons-appset.yaml
+++ b/bootstrap/addons-appset.yaml
@@ -56,5 +56,5 @@ spec:
     {{- if .autoSync }}
       syncPolicy:
         automated:
-          prune: {{ .prune }}
+          prune: {{ default false .prune }}
     {{- end }}
