fix: Fix templatePatch structure
Signed-off-by: Sergiy Kulanov <sergiy_kulanov@epam.com>

--- a/bootstrap/addons-appset.yaml
+++ b/bootstrap/addons-appset.yaml
@@ -54,6 +54,7 @@ spec:
 
   templatePatch: |
     {{- if .autoSync }}
+    spec:
       syncPolicy:
         automated:
           prune: {{ .prune }}
