feat: Update cert manager
Signed-off-by: Sergiy Kulanov <sergiy_kulanov@epam.com>

--- a/charts/addons/cert-manager/values.yaml
+++ b/charts/addons/cert-manager/values.yaml
@@ -1,4 +1,6 @@
 # we are dependency here, so ensure that all values are set correctly under 'cert-manager' values
 cert-manager:
   fullnameOverride: cert-manager
-  installCRDs: true
+  crds:
+    enabled: true
+    keep: true
