--- a/charts/addons/ingress-nginx/values.yaml
+++ b/charts/addons/ingress-nginx/values.yaml
@@ -1,7 +1,7 @@
 ingress-nginx:
   controller:
-    podAnnotations:
-      fluentbit.io/parser: k8s-nginx-ingress
+    # podAnnotations:
+    #   fluentbit.io/parser: k8s-nginx-ingress
     addHeaders:
       X-Content-Type-Options: nosniff
       X-Frame-Options: SAMEORIGIN
