feat: Enable cert-manager
Signed-off-by: Sergiy Kulanov <sergiy_kulanov@epam.com>

--- a/applications/values.yaml
+++ b/applications/values.yaml
@@ -11,8 +11,8 @@ targetRevision: "main"
 # -- Cert Manager
 cert-manager:
   # -- whether to create the namespace or not
-  createNamespace: false
-  enable: false
+  createNamespace: true
+  enable: true
 
 # -- External Secrets Operator
 external-secrets:
