feat: Update cert-manager
Signed-off-by: Sergiy Kulanov <sergiy_kulanov@epam.com>

--- a/applications/templates/cert-manager.yaml
+++ b/applications/templates/cert-manager.yaml
@@ -15,9 +15,7 @@ spec:
     path: charts/addons/cert-manager
     targetRevision: {{ .Values.targetRevision }}
     helm:
-      values: |
-        cert-manager:
-        {{- toYaml (index .Values "cert-manager") | nindent 10 }}
+      releaseName: cert-manager
   destination:
     name: {{ .Values.destinationServer | default "in-cluster" }}
     namespace: cert-manager
