fix: Fix bootstrap for v1 approach
Signed-off-by: Sergiy Kulanov <sergiy_kulanov@epam.com>

--- a/applications/templates/cert-manager.yaml
+++ b/applications/templates/cert-manager.yaml
@@ -16,6 +16,9 @@ spec:
     targetRevision: {{ .Values.targetRevision }}
     helm:
       releaseName: cert-manager
+      values: |
+        cert-manager:
+        {{- toYaml (index .Values "cert-manager") | nindent 10 }}
   destination:
     name: {{ .Values.destinationServer | default "in-cluster" }}
     namespace: cert-manager
