--- a/applications/templates/external-secrets.yaml
+++ b/applications/templates/external-secrets.yaml
@@ -15,6 +15,7 @@ spec:
     path: charts/addons/external-secrets
     targetRevision: {{ .Values.targetRevision }}
     helm:
+      releaseName: external-secrets
       values: |
         external-secrets:
         {{- toYaml (index .Values "external-secrets") | nindent 10 }}
