chore: Enable external-secret
Signed-off-by: Sergiy Kulanov <sergiy_kulanov@epam.com>

--- a/applications/values.yaml
+++ b/applications/values.yaml
@@ -16,5 +16,5 @@ cert-manager:
 
 # -- External Secrets Operator
 external-secrets:
-  createNamespace: false
-  enable: false
+  createNamespace: true
+  enable: true
